Enable experimental bytebuddy flags for JDK 21 mockito support